# app/Http/Controllers/swagger-api/api-doc.php
@@ -63,7 +63,11 @@
  *          
  *      ),
  *      @SWG\Response(response=200,description="successful operation"),
+ *      @SWG\Response(response=302,description="Found"),
  *      @SWG\Response(response=401,description="Unauthorized action."),
+ *      @SWG\Response(response=403,description="Forbidden to access."),
+ *      @SWG\Response(response=500,description="Server Error"),
+
  *  )
  *
 */
@@ -89,9 +93,11 @@
  *          in="formData"
  *      ),
  *      @SWG\Response(response=200,description="successful operation"),
+ *      @SWG\Response(response=302,description="Found"),
  *      @SWG\Response(response=401,description="Unauthorized action."),
+ *      @SWG\Response(response=403,description="Forbidden to access."),
  *      @SWG\Response(response=500,description="Server Error"),
- *      @SWG\Response(response=302,description="Not Found"),
+
  *  )
  *
 */
@@ -104,9 +110,11 @@
  *      operationId="userlogout",
  *      summary="tmpr user logout",
  *      @SWG\Response(response=200,description="successful operation"),
+ *      @SWG\Response(response=302,description="Found"),
  *      @SWG\Response(response=401,description="Unauthorized action."),
+ *      @SWG\Response(response=403,description="Forbidden to access."),
  *      @SWG\Response(response=500,description="Server Error"),
- *      @SWG\Response(response=302,description="Not Found"),
+
  *  )
  *
 */
@@ -114,14 +122,15 @@
 /**
  *
  *      @SWG\Get(
- *      path="/users_csv_data",
+ *      path="/csv/userdata",
  *      tags={"tmpr - User CSV Data"},
  *      operationId="csvdata",
  *      summary="tmpr user return csv data",
  *      @SWG\Response(response=200,description="successful operation"),
+ *      @SWG\Response(response=302,description="Found"),
  *      @SWG\Response(response=401,description="Unauthorized action."),
+ *      @SWG\Response(response=403,description="Forbidden to access."),
  *      @SWG\Response(response=500,description="Server Error"),
- *      @SWG\Response(response=302,description="Not Found"),
  *  )
  *
 */
